--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Figma: Pharmacy</title>
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <nav id="menu-container">
         <div class="menu">
-            <img class="logo" src="/css/assets/Frame 1000003806.svg" alt="Logo Capcare">
+            <img class="logo" src="/css/assets/logo.svg" alt="Logo Capcare">
             <p>Capcare</p>
         </div>
         <div class="menu options">
@@ -29,6 +33,25 @@
             </ul>
         </div>
     </nav>
+    <main>
+        <section id="content">
+            <div>
+                <div class="title">
+                    <h1>Our pharmaceuticals</h1>
+                    <h1>pave the way to <img class="arrow" src="css/assets/arrow-right.svg" alt=""></h1>
+                    <h1>your health and</h1>
+                    <h1>an <span>active lifestyle.</span></h1>
+                </div>
+                <div class="subtitle">
+                    <p>We take pride in offering an extensive selection of high-quality medications and pharmaceutical
+                        solutions for your well-being.</p>
+                    <a href="#"><img src="css/assets/info.svg" alt=""></a>
+                </div>
+            </div>
+            <img id="content-img" src="css/assets/union.svg" alt="">
+        </section>
+        <section id="content-support"></section>
+    </main>
 </body>
 
 </html>
