feat: second menu

--- a/index.html
+++ b/index.html
@@ -43,14 +43,50 @@
                     <h1>an <span>active lifestyle.</span></h1>
                 </div>
                 <div class="subtitle">
-                    <p>We take pride in offering an extensive selection of high-quality medications and pharmaceutical
+                    <p class="subtitle-text">We take pride in offering an extensive selection of high-quality
+                        medications and pharmaceutical
                         solutions for your well-being.</p>
                     <a href="#"><img src="css/assets/info.svg" alt=""></a>
                 </div>
             </div>
             <img id="content-img" src="css/assets/union.svg" alt="">
         </section>
-        <section id="content-support"></section>
+        <section id="content-support">
+            <div class="support item-1">
+                <img class="support-logo" src="css/assets/Group 1.svg" alt="">
+                <div class="text">
+                    <h2>
+                        Medications
+                        by HealXpress
+                    </h2>
+                    <p>We recognize the significance of sustaining well-being amidst the fast pace of contemporary
+                        living.</p>
+                </div>
+                <img class="arrow" src="css/assets/arrow-right.svg" alt="">
+            </div>
+            <div class="support item-2">
+                <h1>We stand by you on the journey towards health and a vibrant life</h1>
+                <a class="btn" href="#">Go to shop <img src="css/assets/arrow-right-alt.svg" alt=""></a>
+            </div>
+            <div class="support item-3">
+                <div class="support-container">
+                    <div class="support-container-img">
+                        <img src="css/assets/avocado.png" alt="">
+                    </div>
+                    <div class="support-container-text">
+                        <h3>Write your<br>review</h3>
+                        <div class="support-container-icons">
+                            <img id="icon-people" src="css/assets/icon-people.jpg" alt="">
+                            <a href="#"><img src="css/assets/add-circle.svg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="text">
+                    <h2>Active buyer <span>10K</span></h2>
+                    <p>We are prepared to offer exclusive perks and bonuses for our<br> loyal customers.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
