feat: menu and home

--- a/pharmacy website/index.html
+++ b/pharmacy website/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="menu-container">
         <div class="menu">
-            <img class="logo" src="/css/assets/logo.svg" alt="Logo Capcare">
+            <img class="logo" src="css/assets/logo.svg" alt="Logo Capcare">
             <p>Capcare</p>
         </div>
         <div class="menu options">
