feat: benefits section

--- a/crypto folder/index.html
+++ b/crypto folder/index.html
@@ -35,7 +35,8 @@
 <section id="home">
     <div class="home-content">
         <div class="home-info">
-            <h1>Revolutionizing <span>Crypto</span> and <span>Fintech</span> Products</h1>
+            <h1>Revolutionizing <span class="text-alt">Crypto</span> and <span class="text-alt">Fintech</span> Products
+            </h1>
             <p>Explore the Future of Finance with Innovative Solutions, Seamlessly Bridging Traditional and Digital
                 Economies.</p>
             <div class="home-info-detail">
@@ -67,6 +68,43 @@
             <li>Robust Security Measures</li>
             <li><img src="css/assets/detail-footer.svg" alt=""> </li>
         </ul>
+    </div>
+</section>
+<section id="benefits">
+    <div class="benefits-content">
+        <h1>Flex Your Digital Wealth with <br><span class="text-alt">Capitech</span></h1>
+        <div class="benefits-card">
+            <div class="column-item">
+                <div class="card item-1 card-1">
+                    <h1><span class="text-alt">Vesatible </span>Use</h1>
+                    <p>Use your digital card for online purchases, in-store <span class="text-alt">purchases</span>, and
+                        more</p>
+                    <img src="css/assets/card.svg" alt="">
+                </div>
+                <div class="card item-2 card-2">
+                    <h1>Easy <span class="text-alt">Management</span></h1>
+                    <img src="css/assets/manage.svg" alt="">
+                    <p>Manage your digital card and transactions easily through our user-friendly app.</p>
+                </div>
+            </div>
+            <div class="column-item">
+                <div class="card item-2 card-3">
+                    <h1>Accepted <span class="text-alt">Everywhere</span></h1>
+                    <img src="css/assets/Grayscale.svg" alt="">
+                    <p>Use your digital card at any merchant that accepts Visa or Mastercard.</p>
+                </div>
+                <div class="card item-4 card-4">
+                    <h1><span class="text-alt">Customer</span>Support</h1>
+                    <img src="css/assets/client.jpg" alt="">
+                    <p>Our team is ready to help you with any questions or issues you may have.</p>
+                </div>
+            </div>
+            <div class="card item-1 card-5">
+                <h1><span class="text-alt">Effortlessly </span>Spend</h1>
+                <p>Our digital card allows you to spend your digital assets with ease."</p>
+                <img src="css/assets/spend.png" alt="">
+            </div>
+        </div>
     </div>
 </section>
 
