fix: home-section

--- a/crypto folder/index.html
+++ b/crypto folder/index.html
@@ -35,7 +35,8 @@
 <section id="home">
     <div class="home-content">
         <div class="home-info">
-            <h1>Revolutionizing <span class="text-alt">Crypto</span> and <span class="text-alt">Fintech</span> Products
+            <h1>Revolutionizing <span class="text-alt"><br>Crypto</span> and <span class="text-alt">Fintech</span>
+                Products
             </h1>
             <p>Explore the Future of Finance with Innovative Solutions, Seamlessly Bridging Traditional and Digital
                 Economies.</p>
@@ -106,6 +107,9 @@
             </div>
         </div>
     </div>
+</section>
+<section>
+
 </section>
 
 </html>
