feat: user comment

--- a/crypto folder/index.html
+++ b/crypto folder/index.html
@@ -108,7 +108,74 @@
         </div>
     </div>
 </section>
-<section>
+<section id="comments">
+    <div class="comments-content">
+        <h1>Trusted by People All Over The World</h1>
+        <div class="user-comments">
+            <div class="card-user-comments">
+                <img src="css/assets/Subtract-comment.svg" alt="">
+                <div class="user-comments-text">
+                    <h3>Rebecca Emard</h3>
+                    <p>Founder - Conn Inc</p>
+                    <img src="css/assets/user-coment.jpg" alt="">
+                    <div class="comments-text">
+                        <h2>Saved hours every week!</h2>
+                        <p>I have been saved so much time on tax calculations. And it gives me reliable projections.I
+                            love the financial reports. The tool automatically organizes all data and gives us clarity
+                            on spend.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-user-comments">
+                <img src="css/assets/Subtract-comment.svg" alt="">
+                <div class="user-comments-text">
+                    <h3>William Tromp</h3>
+                    <p>CTO - Gislason and Sons</p>
+                    <img src="css/assets/user-coment.jpg" alt="">
+                    <div class="comments-text">
+                        <h2>Super user-friendly</h2>
+                        <p>The UI is so intuitive that anyone can use it, without any knowledge on the system & I love
+                            the financial reports. The tool automatically organizes all data and gives us clarity on
+                            spend.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-user-comments">
+                <img src="css/assets/Subtract-comment.svg" alt="">
+                <div class="user-comments-text">
+                    <h3>Rebecca Emard</h3>
+                    <p>Founder - Conn Inc</p>
+                    <img src="css/assets/user-coment.jpg" alt="">
+                    <div class="comments-text">
+                        <h2>Saved hours every week!</h2>
+                        <p>I have been saved so much time on tax calculations. And it gives me reliable
+                            projections.I
+                            love the financial reports. The tool automatically organizes all data and gives us
+                            clarity
+                            on spend.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="historic">
+            <div class="historic-data">
+                <h1>50+</h1>
+                <p>Cities</p>
+            </div>
+            <div class="historic-data">
+                <h1>50,000+</h1>
+                <p>Transactions</p>
+            </div>
+            <div class="historic-data">
+                <h1>3M+</h1>
+                <p>Users</p>
+            </div>
+            <div class="historic-data">
+                <h1>5</h1>
+                <p>User Ratings</p>
+            </div>
+        </div>
+    </div>
 
 </section>
 
