feat: footer and last section

--- a/crypto folder/index.html
+++ b/crypto folder/index.html
@@ -10,173 +10,200 @@
 
 <body>
 
-</body>
-<nav id="nav-bar">
-    <div class="item-menu logo">
-        <img class="icon-logo" src="css/assets/logo.svg" alt="">
+
+    <nav id="nav-bar">
+        <div class="item-menu logo">
+            <img class="icon-logo" src="css/assets/logo.svg" alt="">
+            <h2>Capitech</h2>
+        </div>
+        <div>
+            <ul class="item-menu menu">
+                <li class="option-menu icon-home"><img src="css/assets/home-icon.svg" alt=""></li>
+                <li class="option-menu">Products</li>
+                <li class="option-menu">Solution</li>
+                <li class="option-menu">Company</li>
+            </ul>
+        </div>
+        <div>
+            <ul class="item-menu login">
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Signup</a></li>
+                <li><img src="css/assets/user-icon.svg" alt=""></li>
+            </ul>
+        </div>
+    </nav>
+    <section id="home">
+        <div class="home-content">
+            <div class="home-info">
+                <h1>Revolutionizing <span class="text-alt"><br>Crypto</span> and <span class="text-alt">Fintech</span>
+                    Products
+                </h1>
+                <p>Explore the Future of Finance with Innovative Solutions, Seamlessly Bridging Traditional and Digital
+                    Economies.</p>
+                <div class="home-info-detail">
+                    <img src="css/assets/globe.svg" alt="">
+                    <p>58,0000+ <br> Users from the globe</p>
+                </div>
+                <p class="home-info-btn">
+                    Unlock Financial Freedom <a href="#"><img id="arrow-btn" src="css/assets/arrow-btn.svg" alt=""></a>
+                </p>
+            </div>
+            <div class="home-img">
+                <a id="home-img-detail" href="#"><img src="css/assets/arrow-img.svg" alt=""></a>
+                <img id="home-img-img" src="css/assets/Subtract.png" alt="">
+            </div>
+        </div>
+
+        <div class="home-footer">
+            <ul id="scroll-text">
+                <li>Secure Transactions DeFI</li>
+                <li><img src="css/assets/detail-footer.svg" alt=""></li>
+                <li>Instant Settlements</li>
+                <li><img src="css/assets/detail-footer.svg" alt=""></li>
+                <li>Seamless Integration</li>
+                <li><img src="css/assets/detail-footer.svg" alt=""></li>
+                <li>Cross platform Access</li>
+                <li><img src="css/assets/detail-footer.svg" alt=""></li>
+                <li>Instant Settlements</li>
+                <li><img src="css/assets/detail-footer.svg" alt=""></li>
+                <li>Robust Security Measures</li>
+                <li><img src="css/assets/detail-footer.svg" alt=""> </li>
+            </ul>
+        </div>
+    </section>
+    <section id="benefits">
+        <div class="benefits-content">
+            <h1>Flex Your Digital Wealth with <br><span class="text-alt">Capitech</span></h1>
+            <div class="benefits-card">
+                <div class="column-item">
+                    <div class="card item-1 card-1">
+                        <h1><span class="text-alt">Vesatible </span>Use</h1>
+                        <p>Use your digital card for online purchases, in-store <span class="text-alt">purchases</span>,
+                            and
+                            more</p>
+                        <img src="css/assets/card.svg" alt="">
+                    </div>
+                    <div class="card item-2 card-2">
+                        <h1>Easy <span class="text-alt">Management</span></h1>
+                        <img src="css/assets/manage.svg" alt="">
+                        <p>Manage your digital card and transactions easily through our user-friendly app.</p>
+                    </div>
+                </div>
+                <div class="column-item">
+                    <div class="card item-2 card-3">
+                        <h1>Accepted <span class="text-alt">Everywhere</span></h1>
+                        <img src="css/assets/Grayscale.svg" alt="">
+                        <p>Use your digital card at any merchant that accepts Visa or Mastercard.</p>
+                    </div>
+                    <div class="card item-4 card-4">
+                        <h1><span class="text-alt">Customer</span>Support</h1>
+                        <img src="css/assets/client.jpg" alt="">
+                        <p>Our team is ready to help you with any questions or issues you may have.</p>
+                    </div>
+                </div>
+                <div class="card item-1 card-5">
+                    <h1><span class="text-alt">Effortlessly </span>Spend</h1>
+                    <p>Our digital card allows you to spend your digital assets with ease."</p>
+                    <img src="css/assets/spend.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="comments">
+        <div class="comments-content">
+            <h1>Trusted by People All Over The World</h1>
+            <div class="user-comments">
+                <div class="card-user-comments">
+                    <img src="css/assets/Subtract-comment.svg" alt="">
+                    <div class="user-comments-text">
+                        <h3>Rebecca Emard</h3>
+                        <p>Founder - Conn Inc</p>
+                        <img src="css/assets/user-coment.jpg" alt="">
+                        <div class="comments-text">
+                            <h2>Saved hours every week!</h2>
+                            <p>I have been saved so much time on tax calculations. And it gives me reliable
+                                projections.I
+                                love the financial reports. The tool automatically organizes all data and gives us
+                                clarity
+                                on spend.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-user-comments">
+                    <img src="css/assets/Subtract-comment.svg" alt="">
+                    <div class="user-comments-text">
+                        <h3>William Tromp</h3>
+                        <p>CTO - Gislason and Sons</p>
+                        <img src="css/assets/user-coment.jpg" alt="">
+                        <div class="comments-text">
+                            <h2>Super user-friendly</h2>
+                            <p>The UI is so intuitive that anyone can use it, without any knowledge on the system & I
+                                love
+                                the financial reports. The tool automatically organizes all data and gives us clarity on
+                                spend.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-user-comments">
+                    <img src="css/assets/Subtract-comment.svg" alt="">
+                    <div class="user-comments-text">
+                        <h3>Rebecca Emard</h3>
+                        <p>Founder - Conn Inc</p>
+                        <img src="css/assets/user-coment.jpg" alt="">
+                        <div class="comments-text">
+                            <h2>Saved hours every week!</h2>
+                            <p>I have been saved so much time on tax calculations. And it gives me reliable
+                                projections.I
+                                love the financial reports. The tool automatically organizes all data and gives us
+                                clarity
+                                on spend.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="historic">
+                <div class="historic-data">
+                    <h1>50+</h1>
+                    <p>Cities</p>
+                </div>
+                <div class="historic-data">
+                    <h1>50,000+</h1>
+                    <p>Transactions</p>
+                </div>
+                <div class="historic-data">
+                    <h1>3M+</h1>
+                    <p>Users</p>
+                </div>
+                <div class="historic-data">
+                    <h1>5</h1>
+                    <p>User Ratings</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section id="started">
+        <div class="started-content">
+            <div class="wallet"></div>
+            <div class="started-text">
+                <h1>Go digital now!</h1>
+                <p>Our digital platform allows you to access your money from anywhere, anytime. Which our innovative
+                    security features, and first-in-class service, we combine the best of traditional banking with a
+                    modern convenience of digital banking today</p>
+                <a href="#">get started <span><img src="css/assets/arrow-btn.svg" alt=""></span></a>
+            </div>
+            <img src="css/assets/Coint.png" alt="">
+        </div>
+    </section>
+    <footer id="footer-bar">
+        <ul>
+            <li><img src="css/assets/twitter-icon.png" alt=""></li>
+            <li><img src="css/assets/linkedin-icon.png" alt=""></li>
+            <li><img src="css/assets/facebook-icon.png" alt=""></li>
+        </ul>
         <h2>Capitech</h2>
-    </div>
-    <div>
-        <ul class="item-menu menu">
-            <li class="option-menu icon-home"><img src="css/assets/home-icon.svg" alt=""></li>
-            <li class="option-menu">Products</li>
-            <li class="option-menu">Solution</li>
-            <li class="option-menu">Company</li>
-        </ul>
-    </div>
-    <div>
-        <ul class="item-menu login">
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Signup</a></li>
-            <li><img src="css/assets/user-icon.svg" alt=""></li>
-        </ul>
-    </div>
-</nav>
-<section id="home">
-    <div class="home-content">
-        <div class="home-info">
-            <h1>Revolutionizing <span class="text-alt"><br>Crypto</span> and <span class="text-alt">Fintech</span>
-                Products
-            </h1>
-            <p>Explore the Future of Finance with Innovative Solutions, Seamlessly Bridging Traditional and Digital
-                Economies.</p>
-            <div class="home-info-detail">
-                <img src="css/assets/globe.svg" alt="">
-                <p>58,0000+ <br> Users from the globe</p>
-            </div>
-            <p class="home-info-btn">
-                Unlock Financial Freedom <a href="#"><img id="arrow-btn" src="css/assets/arrow-btn.svg" alt=""></a>
-            </p>
-        </div>
-        <div class="home-img">
-            <a id="home-img-detail" href="#"><img src="css/assets/arrow-img.svg" alt=""></a>
-            <img id="home-img-img" src="css/assets/Subtract.png" alt="">
-        </div>
-    </div>
-
-    <div class="home-footer">
-        <ul id="scroll-text">
-            <li>Secure Transactions DeFI</li>
-            <li><img src="css/assets/detail-footer.svg" alt=""></li>
-            <li>Instant Settlements</li>
-            <li><img src="css/assets/detail-footer.svg" alt=""></li>
-            <li>Seamless Integration</li>
-            <li><img src="css/assets/detail-footer.svg" alt=""></li>
-            <li>Cross platform Access</li>
-            <li><img src="css/assets/detail-footer.svg" alt=""></li>
-            <li>Instant Settlements</li>
-            <li><img src="css/assets/detail-footer.svg" alt=""></li>
-            <li>Robust Security Measures</li>
-            <li><img src="css/assets/detail-footer.svg" alt=""> </li>
-        </ul>
-    </div>
-</section>
-<section id="benefits">
-    <div class="benefits-content">
-        <h1>Flex Your Digital Wealth with <br><span class="text-alt">Capitech</span></h1>
-        <div class="benefits-card">
-            <div class="column-item">
-                <div class="card item-1 card-1">
-                    <h1><span class="text-alt">Vesatible </span>Use</h1>
-                    <p>Use your digital card for online purchases, in-store <span class="text-alt">purchases</span>, and
-                        more</p>
-                    <img src="css/assets/card.svg" alt="">
-                </div>
-                <div class="card item-2 card-2">
-                    <h1>Easy <span class="text-alt">Management</span></h1>
-                    <img src="css/assets/manage.svg" alt="">
-                    <p>Manage your digital card and transactions easily through our user-friendly app.</p>
-                </div>
-            </div>
-            <div class="column-item">
-                <div class="card item-2 card-3">
-                    <h1>Accepted <span class="text-alt">Everywhere</span></h1>
-                    <img src="css/assets/Grayscale.svg" alt="">
-                    <p>Use your digital card at any merchant that accepts Visa or Mastercard.</p>
-                </div>
-                <div class="card item-4 card-4">
-                    <h1><span class="text-alt">Customer</span>Support</h1>
-                    <img src="css/assets/client.jpg" alt="">
-                    <p>Our team is ready to help you with any questions or issues you may have.</p>
-                </div>
-            </div>
-            <div class="card item-1 card-5">
-                <h1><span class="text-alt">Effortlessly </span>Spend</h1>
-                <p>Our digital card allows you to spend your digital assets with ease."</p>
-                <img src="css/assets/spend.png" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-<section id="comments">
-    <div class="comments-content">
-        <h1>Trusted by People All Over The World</h1>
-        <div class="user-comments">
-            <div class="card-user-comments">
-                <img src="css/assets/Subtract-comment.svg" alt="">
-                <div class="user-comments-text">
-                    <h3>Rebecca Emard</h3>
-                    <p>Founder - Conn Inc</p>
-                    <img src="css/assets/user-coment.jpg" alt="">
-                    <div class="comments-text">
-                        <h2>Saved hours every week!</h2>
-                        <p>I have been saved so much time on tax calculations. And it gives me reliable projections.I
-                            love the financial reports. The tool automatically organizes all data and gives us clarity
-                            on spend.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-user-comments">
-                <img src="css/assets/Subtract-comment.svg" alt="">
-                <div class="user-comments-text">
-                    <h3>William Tromp</h3>
-                    <p>CTO - Gislason and Sons</p>
-                    <img src="css/assets/user-coment.jpg" alt="">
-                    <div class="comments-text">
-                        <h2>Super user-friendly</h2>
-                        <p>The UI is so intuitive that anyone can use it, without any knowledge on the system & I love
-                            the financial reports. The tool automatically organizes all data and gives us clarity on
-                            spend.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-user-comments">
-                <img src="css/assets/Subtract-comment.svg" alt="">
-                <div class="user-comments-text">
-                    <h3>Rebecca Emard</h3>
-                    <p>Founder - Conn Inc</p>
-                    <img src="css/assets/user-coment.jpg" alt="">
-                    <div class="comments-text">
-                        <h2>Saved hours every week!</h2>
-                        <p>I have been saved so much time on tax calculations. And it gives me reliable
-                            projections.I
-                            love the financial reports. The tool automatically organizes all data and gives us
-                            clarity
-                            on spend.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="historic">
-            <div class="historic-data">
-                <h1>50+</h1>
-                <p>Cities</p>
-            </div>
-            <div class="historic-data">
-                <h1>50,000+</h1>
-                <p>Transactions</p>
-            </div>
-            <div class="historic-data">
-                <h1>3M+</h1>
-                <p>Users</p>
-            </div>
-            <div class="historic-data">
-                <h1>5</h1>
-                <p>User Ratings</p>
-            </div>
-        </div>
-    </div>
-
-</section>
+        <p>Copyright © 2023 cadena. All rights reserved.</p>
+    </footer>
+</body>
 
 </html>
