feat: modal menu

--- a/crypto folder/index.html
+++ b/crypto folder/index.html
@@ -9,8 +9,6 @@
 </head>
 
 <body>
-
-
     <nav id="nav-bar">
         <div class="item-menu logo">
             <img class="icon-logo" src="css/assets/logo.svg" alt="">
@@ -29,6 +27,27 @@
                 <li><a href="#">Login</a></li>
                 <li><a href="#">Signup</a></li>
                 <li><img src="css/assets/user-icon.svg" alt=""></li>
+            </ul>
+        </div>
+    </nav>
+    <nav id="nav-bar-mobile">
+        <div class="item-menu logo">
+            <img class="icon-logo" src="css/assets/logo.svg" alt="">
+            <h2>Capitech</h2>
+        </div>
+        <img id="logo-mobile-open" src="css/assets/Menu.svg" alt="">
+        <div class="mobile-content">
+            <img id="logo-mobile-close" src="css/assets/Close.svg" alt="">
+            <ul class="itens-menu">
+                <li>
+                    <ul class="itens-menu-login">
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#">Signup</a></li>
+                    </ul>
+                </li>
+                <li class="option-menu"><a href="">Products</a></li>
+                <li class="option-menu"><a href="">Solution</a></li>
+                <li class="option-menu"><a href="">Company</a></li>
             </ul>
         </div>
     </nav>
@@ -204,6 +223,7 @@
         <h2>Capitech</h2>
         <p>Copyright © 2023 cadena. All rights reserved.</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
