fix: responsive mobile(320px,375px,425px) laptop(1024px,1140px)

--- a/crypto folder/index.html
+++ b/crypto folder/index.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
         </nav>
-        <nav id="nav-bar-mobile" class="container">
+        <nav id="nav-bar-mobile">
             <div class="item-menu logo">
                 <img class="icon-logo" src="img/icones/logo.svg" alt="logo Capitech">
                 <h2>Capitech</h2>
@@ -57,8 +57,7 @@
         <section id="home">
             <div class="home-content">
                 <div class="home-info">
-                    <h1>Revolutionizing <span class="text-alt"><br>Crypto</span> and <span
-                            class="text-alt">Fintech</span>
+                    <h1>Revolutionizing <span class="text-alt">Crypto</span> and <span class="text-alt">Fintech</span>
                         Products
                     </h1>
                     <p>Explore the Future of Finance with Innovative Solutions, Seamlessly Bridging Traditional and
