feat: modal login

--- a/crypto folder/index.html
+++ b/crypto folder/index.html
@@ -228,6 +228,7 @@
             </div>
         </section>
     </article>
+
     <footer id="footer-bar">
         <div class="container">
             <ul>
@@ -239,6 +240,34 @@
             <p>Copyright © 2023 cadena. All rights reserved.</p>
         </div>
     </footer>
+
+    <div id="modal-log" class="modal-container">
+        <div class="modal-login">
+            <img src="img/fotos/image-login.jpg" alt="">
+            <div class="login-date">
+                <h1>Crypto Wallet</h1>
+                <ul>
+                    <li>Login</li>
+                    <li>SignUp</li>
+                </ul>
+                <form action="">
+                    <label for="email">email</label>
+                    <input id="email" type="text" placeholder="Enter your email">
+                    <label for="senha">senha</label>
+                    <input id="senha" type="password" placeholder="Enter password">
+                    <img src="img/icones/eye-closed.svg" alt="">
+                    <div class="login-option">
+                        <input type="submit" id="loginBtn" value="login">
+                        <p>or</p>
+                        <ul>
+                            <li><img src="img/redes/facebook-icon.png" alt=""></li>
+                            <li><img src="img/redes/twitter-icon.png" alt=""></li>
+                        </ul>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
